# hexmapper

./: .env.example  .gitignore  Makefile  README.md  eslint.config.js  hex_map-local-stack.md  import_api.md  index.html  package-lock.json  package.json  playwright.config.js  sample_character.json  tailwind.config.js  vercel.json  vite.config.js
deploy/: Caddyfile  (+13 more)
server/: .env.example  Cargo.toml  Dockerfile
server/deploy/: deploy.sh  docker-compose.yml
server/examples/: activity_replay_check.rs  apply_sql.rs  calendar_replay_check.rs  character_replay_check.rs  chat_replay_check.rs  compendium_replay_check.rs  concurrency_check.rs  db_check.rs  dice_annotation_replay_check.rs  dice_projector_check.rs  dice_replay_check.rs  dungeon_note_replay_check.rs  dungeon_replay_check.rs  hex_cell_replay_check.rs  hex_note_replay_check.rs  macro_replay_check.rs  map_replay_check.rs  migration_audit.rs  party_quest_replay_check.rs  party_session_note_replay_check.rs  photo_replay_check.rs  prefs_replay_check.rs  session_member_replay_check.rs  session_replay_check.rs  stat_block_replay_check.rs  vault_container_replay_check.rs  vault_li_replay_check.rs
server/src/: authz.rs  config.rs  error.rs  lib.rs  main.rs  observability.rs  ratelimit.rs  state.rs
server/tests/: authz.rs  character_api.rs  character_projection.rs  crawl_rounds.rs  dungeon_projection.rs  explore_concurrency.rs  hex_concurrency.rs  hex_map_session_guard.rs  hex_projection.rs  light_sources.rs  oracle_chain.rs  oracle_prompt_tags.rs  room_generation_guard.rs  session_member.rs  table_import.rs  travel.rs
(+538 files in other folders)
